# intel-uncore-freq-dumper

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: clang-tidy.yml  ctest.yml
include/intel-uncore-freq-dumper/: Config.hpp  UncoreFrequencyReader.hpp  UncoreFrequencyReaderFunction.hpp  UncoreFrequencyReaderPcmFunction.hpp  UncoreFrequencyReaderSysfsFunction.hpp
src/: CMakeLists.txt
src/intel-uncore-freq-dumper/: Config.cpp  Main.cpp  UncoreFrequencyReader.cpp  UncoreFrequencyReaderPcmFunction.cpp  UncoreFrequencyReaderSysfsFunction.cpp
tooling/: clang-tidy.py
